--- a/application/app/config/mapbender.yml
+++ b/application/app/config/mapbender.yml
@@ -179,15 +179,14 @@ parameters:
                             - { template: a4landscape, label: A4 Landscape, format: a4}
                             - { template: a3portrait, label: A3 Portrait, format: a3}
                             - { template: a3landscape, label: A3 Landscape, format: a3}
-                        scales: [500, 1000, 5000, 10000, 25000]
+                        scales: [500, 1000, 5000, 10000, 25000, 50000]
                         quality_levels:
                             - { dpi: 72 , label: Draft (72dpi)}
                             - { dpi: 288,  label: Document (288dpi)}
                         rotatable: true
                         optional_fields:
                             title:                                  
-                                label: Title              # label of the optional field          
-                                type: text                # type of the optional field          
+                                label: Title              # label of the optional field         
                                 options:                  # 
                                     required: true        # true or false          
                     lineruler:
