--- a/application/app/config/mapbender.yml
+++ b/application/app/config/mapbender.yml
@@ -76,6 +76,14 @@ parameters:
                         icon: iconPrint
                         target: printclient
                         action: open
+                    imageexport-button:
+                        title: Image Export
+                        tooltip: Image Export
+                        class: Mapbender\CoreBundle\Element\Button
+                        label: true
+                        icon: iconImageExport
+                        target: imageexport
+                        action: open
                     legend-button:
                         title: Legend
                         tooltip: Legend
@@ -175,6 +183,9 @@ parameters:
                         defaultFormat: 'image/png'
                         defaultInfoFormat: 'text/html'
                         splitLayers: false
+                    imageexport:
+                        class: Mapbender\PrintBundle\Element\ImageExport
+                        target: map
                     printclient:
                         class: Mapbender\CoreBundle\Element\PrintClient
                         target: map
