--- a/application/app/config/mapbender.yml
+++ b/application/app/config/mapbender.yml
@@ -260,6 +260,7 @@ parameters:
                     poi:
                         class: Mapbender\CoreBundle\Element\POI
                         target: map
+                        body: 'Please take a look at this POI:'
                 sidepane:
                     layertree:
                         title: Layertree
