parameter 'fallback_locale' added

--- a/application/app/config/parameters.yml.dist
+++ b/application/app/config/parameters.yml.dist
@@ -12,6 +12,7 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
+    fallback_locale:   en
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
 
