--- a/application/app/config/config.yml
+++ b/application/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
 
 framework:
     #esi:             ~
-    translator:      { fallback: %locale% }
+    translator:      { fallback: %fallback_locale% }
     secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
