--- a/application/app/config/config.yml
+++ b/application/app/config/config.yml
@@ -18,7 +18,7 @@ framework:
         cookie_httponly: true
         cookie_secure: %cookie_secure%
         cookie_lifetime: %cookie_lifetime%
-        
+
 
 # Twig Configuration
 twig:
@@ -34,14 +34,15 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
-    #java: /usr/bin/java
+    use_controller: true
     filters:
         cssrewrite: ~
-        #closure:
-        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
-        #yui_css:
-        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+        sass: ~
+        compass:
+            no_line_comments: true
+            style: compressed
+            load_paths:
+                 - "%kernel.root_dir%/../mapbender/src/Mapbender/CoreBundle/Resources/public/sass"
 
 # Doctrine Configuration
 doctrine:
@@ -102,4 +103,5 @@ ows_proxy3_core:
 #            - host_b
 
 # Mapbender Configuration
-mapbender_core: ~
+mapbender_core:
+    static_assets: %use_static_assets%
