--- a/application/app/config/parameters.yml.dist
+++ b/application/app/config/parameters.yml.dist
@@ -24,3 +24,5 @@ parameters:
     # framework : http://symfony.com/doc/2.1/reference/configuration/framework.html#cookie-lifetime
     cookie_secure: false
     cookie_lifetime: 3600
+
+    use_static_assets: true
