added sass processing to phing prep phase

--- a/build.xml
+++ b/build.xml
@@ -225,6 +225,7 @@
     <target name="prepare" depends="deps,doc">
         <exec command="application/app/console assets:install application/web/" />
         <exec command="application/app/console assetic:dump --env=prod --no-debug" />
+        <exec command="application/app/console mapbender:assets:dump" />
         <exec command="application/app/console doctrine:database:drop --force" />
         <exec command="application/app/console doctrine:database:create" />
         <exec command="application/app/console doctrine:schema:create" />
@@ -238,6 +239,8 @@
         <delete>
             <fileset  dir=".">
                 <include name="application/doc/api" />
+                <include name="application/web/css" />
+                <include name="application/web/assets" />
                 <include name="application/doc/*.html" />
                 <include name="artefacts/**" />
                 <include name="testresults/**" />
