--- a/application/app/config/config.yml
+++ b/application/app/config/config.yml
@@ -103,4 +103,5 @@ ows_proxy3_core:
 #            - host_b
 
 # Mapbender Configuration
-mapbender_core: ~
+mapbender_core:
+    static_assets: %use_static_assets%
