made compass bin path configurable in parameters.yml

--- a/application/app/config/config.yml
+++ b/application/app/config/config.yml
@@ -39,6 +39,7 @@ assetic:
         cssrewrite: ~
         sass: ~
         compass:
+            bin: %compass_path%
             no_line_comments: true
             style: compressed
             load_paths:
