made ruby path configurable

--- a/application/app/config/config.yml
+++ b/application/app/config/config.yml
@@ -35,6 +35,7 @@ assetic:
     debug:          %kernel.debug%
     use_controller: false
     use_controller: true
+    ruby: %ruby_path%
     filters:
         cssrewrite: ~
         sass: ~
