--- a/application/app/config/config_dev.yml
+++ b/application/app/config/config_dev.yml
@@ -25,7 +25,7 @@ assetic:
         cssrewrite: ~
         sass: ~
         compass:
-            style: nested
+            style: compressed
             load_paths:
                  - "%kernel.root_dir%/../mapbender/src/Mapbender/CoreBundle/Resources/public/sass"
 
