--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
   - cd mapbender-starter
   - git submodule update --init --recursive
   - cd application
+  - composer install
   - rm -rf mapbender
   - ln -s ../../mapbender
 script: phpunit -c app/
