--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ before_script:
   - ln -s ../../mapbender
 script: phpunit -c app/
 after_script:
-  - php bin/coveralls -v
+  - php bin/coveralls -v # test
