--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
   - git submodule update --init --recursive
   - cd application
   - cp app/config/parameters.yml.dist app/config/parameters.yml
-  - composer install --dev
+  - composer update --dev
   - rm -rf mapbender
   - ln -s ../../mapbender
 script: phpunit -c app/
