try to use proper mapbender revision when pushing clover.xml

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,7 @@ script: phpunit -c app/
 after_script:
   - php bin/coveralls -v
   - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --repository g/mapbender/mapbender --format=php-clover ../testresults/clover.xml
+  - cd mapbender
+  - export MYREV=$(git rev-parse HEAD)
+  - cd ..
+  - php ocular.phar code-coverage:upload --repository g/mapbender/mapbender --format=php-clover ../testresults/clover.xml --revision $MYREV
