--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_script:
   - composer update --dev
   - rm -rf mapbender
   - ln -s ../../mapbender
+  - phantomjs --webdriver=9876
 script: phpunit -c app/
 after_script:
   - php bin/coveralls -v
