--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ before_script:
   - composer update --dev
   - rm -rf mapbender
   - ln -s ../../mapbender
+  - php app/console doctrine:database:create
+  - php app/console doctrine:schema:create
+  - php app/console doctrine:fixtures:load --fixtures=./mapbender/src/Mapbender/CoreBundle/DataFixtures/ORM/Epsg/ --append
   - phantomjs --webdriver=9876 &
 script: phpunit -c app/
 after_script:
