--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
   - php app/console doctrine:schema:create
   - php app/console doctrine:fixtures:load --fixtures=./mapbender/src/Mapbender/CoreBundle/DataFixtures/ORM/Epsg/ --append
   - phantomjs --webdriver=9876 &
+  - export PJSPORT=$(echo $!)
 script: phpunit -c app/
 after_script:
   - php bin/coveralls -v
@@ -27,3 +28,4 @@ after_script:
   - cd ..
   - cat /tmp/weblog
   - php ocular.phar code-coverage:upload --repository g/mapbender/mapbender --format=php-clover ../testresults/clover.xml --revision $MYREV
+  - kill -9 $PJSPORT
