--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ before_script:
   - php app/console doctrine:database:create
   - php app/console doctrine:schema:create
   - php app/console doctrine:fixtures:load --fixtures=./mapbender/src/Mapbender/CoreBundle/DataFixtures/ORM/Epsg/ --append
+  - php app/console fom:user:resetroot --username root --password root --email root@root.de --silent
   - phantomjs --webdriver=9876 &
   - export PJSPORT=$(echo $!)
 script: phpunit -c app/ --coverage-clover ../../testresults/clover.xml
