fix clover.xml location

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
   - php app/console fom:user:resetroot --username root --password root --email root@root.de --silent
   - phantomjs --webdriver=9876 &
   - export PJSPORT=$(echo $!)
-script: phpunit -c app/ --coverage-clover ../../testresults/clover.xml
+script: phpunit -c app/ --coverage-clover ../testresults/clover.xml
 after_script:
   - php bin/coveralls -v
   - wget https://scrutinizer-ci.com/ocular.phar
